# DSP_Project

./: README.md
evaluation/: test.ipynb
laws_database/: .dockerignore  Dockerfile  README.md  chunker.py  create_vector.py  demo_semantic_search.py  demo_similarity_search.py  docker-compose-dev.yml  docker-compose.yml  init.sql  pyproject.toml  similarity_test.py
question_crawl/: 22000_-職業安全管理學科(甲安).csv  crawl.ipynb  crawl.py  loadpdf.py  output.csv  pyproject.toml
src/evaluation/: .gitignore  apidemo.py  demo.py  line_bot.py  main.py  no_law_name_filter.txt  pyproject.toml  repeat.py  similarity_search.py  telegram_bot.py  view_result.ipynb
src/laws_database/: add_single_law.py  create_vector.py  demo_similarity_search.py  docker-compose-dev.yml  docker-compose.yml  similarity_search.py  similarity_test.py
src/question_crawl/: .gitignore  pyproject.toml
src/web_crawl/: README.md  crawler.py  generate_law.py  get_link_from_div.py  links.txt  no_law_name_filter.txt  pyproject.toml
web-crawl/: .gitignore  README.md  crawler.py  crawler123.ipynb  crawler_json.py  format.json  links.txt  pyproject.toml
