[project]
name = "question-crawl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "cryptography>=46.0.3",
    "ipykernel>=7.1.0",
    "pandas>=2.3.3",
    "pypdf>=6.1.3",
    "requests>=2.32.5",
]
